# vpn-infra

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.sh
.github/: dependabot.yml
.github/workflows/: bounce.yaml  bounce_environment.yaml  deploy.yaml  deploy_environment.yaml  generate_configs.yaml  pr.yaml  scorecard.yml
ansible/: .ansible-lint-ignore  bounce_interfaces.yaml  dev.yaml  generate_config_templates.yaml  inventory.yaml  tests.yaml  vpn.yaml  wireguard.yaml  wireguard_sn10.yaml  wireguard_sn11.yaml  wireguard_sn3.yaml
ansible/roles/: requirements.yml
ansible/roles/client_configs/tasks/: main.yaml
ansible/roles/client_configs/templates/: wg_client.conf.j2
ansible/roles/vpn_mgt/tasks/: bird.yaml  cleanup_interfaces.yaml  main.yaml  netfilter.yaml  system_interfaces.yaml  wg_config.yaml
ansible/roles/vpn_mgt/templates/: bird.conf.j2  interfaces.j2  netfilter.j2  wg.conf.j2  wg_interface.j2
terraform/: ansible.tf  dev3.tfvars  prod1.tfvars  prod11.tfvars  prod2.tfvars  provider.tf  vars.tf  vpnbox.tf
