[project]
name = "vpn-infra"
version = "0.1.0"
description = "NYC Mesh VPN Infrastructure as Code"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ansible>=12.1.0",
    "ansible-core>=2.19.3",
    "cffi>=2.0.0",
    "cryptography>=46.0.2",
    "jinja2>=3.1.6",
    "markupsafe>=3.0.3",
    "netaddr>=1.3.0",
    "packaging>=25.0",
    "pycparser>=2.23",
    "pyyaml>=6.0.3",
    "resolvelib>=1.2.1",
]
